Continuing updates for Zurb Foundation 6

--- a/wp-content/themes/indienomicon/style.css
+++ b/wp-content/themes/indienomicon/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wordpress.org/themes/indienomicon
 Author: Nick Pettit
 Author URI: https://nickpettit.com/
 Description: This is the WordPress theme for the official Indienomicon website.
-Version: 1.0
+Version: 1.1
 Tags: indienomicon
 Text Domain: indienomicon
 
@@ -25,21 +25,20 @@ body {
 }
 
 h2 {
-  margin-bottom: 0.5em;
+  margin: 0 0 0.5em 0;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.6em;
+  font-size: 2em;
   color: rgba(0,0,0,0.75);
   text-transform: uppercase;
-  margin-top: 1em;
 }
 
 h2.tribe-events-page-title {
-    font-size: 1.6em;
+    font-size: 2em;
     text-align: inherit;
 }
 
-section.grid-x {
-  margin-bottom: 4em;
+section {
+  padding: 2em 0;
 }
 
 a {
@@ -141,7 +140,7 @@ iframe {
 }
 
 /* Medium Screens (Tablets) */
-@media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 40em) {
 
   h2,
   h2.tribe-events-page-title {
@@ -151,7 +150,7 @@ iframe {
 }
 
 /* Large Screens (Laptops) */
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 64em) {
 
   h2,
   h2.tribe-events-page-title {
@@ -228,7 +227,7 @@ a.button {
   outline: none;
   width: 100%;
   border: none;
-  box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.1);
   transition: all 80ms ease-out;
 }
 
@@ -241,7 +240,7 @@ a.button:focus  {
 
 
 /* Medium Screens (Tablets) */
-@media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 40em) {
 
   .button,
   a.button {
@@ -249,6 +248,19 @@ a.button:focus  {
     padding: 0.5em 1.2em;
   }
 
+}
+
+
+/**********************************************************
+
+  CARDS
+
+ **********************************************************/
+
+.card {
+  border-radius: 7px;
+  border: none;
+  box-shadow: 0px 0px 2px rgba(0,0,0,0.2), 0px 1px 50px rgba(0,0,0,0.4);
 }
 
 
@@ -277,15 +289,53 @@ header {
 #top-level-navigation {
   text-transform: uppercase;
   font-weight: bold;
+  position: fixed;
+  bottom: 140px;
+  right: 30px;
+  background: #FFF;
+  width: 50%;
+  z-index: 99;
+  margin: 0;
+  border-radius: 12px;
+  border: 8px solid rgba(24, 154, 153, 1);
+  box-shadow: 0px 4px 25px rgba(0,0,0,0.5);
+}
+
+#top-level-navigation a {
+  font-size: 1.1em;
+  padding: 0.8em;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(0,0,0,0.07);
+  width: 100%;
+  text-align: center;
+}
+
+.responsive-nav-button-container {
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  z-index: 99;
+  animation: bounce-scale 200ms ease-in-out 1000ms;
+}
+
+.button.responsive-nav-button {
+  font-size: 3em;
+  border-radius: 100%;
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: 20px;
+  box-shadow: 0px 0px 1px rgba(0,0,0,0.4), 0px 4px 25px rgba(0,0,0,0.5);
 }
 
 .top-bar-title {
-  width: 400px;
+  width: 100%;
 }
 
 .site-logo {
-  display: inline;
-  font-size: 2em;
+  font-size: 1.8em;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .site-logo a {
@@ -293,7 +343,6 @@ header {
   font-family: 'Josefin Sans', sans-serif;
   text-transform: uppercase;
   font-weight: bold;
-  width: 250px;
   -webkit-transition: -webkit-transform 100ms ease-out;
   transition: transform 100ms ease-out;
 }
@@ -318,33 +367,66 @@ header {
   transform: scale(1.1) translate(-1px, 1px) rotate(-2deg);
 }
 
-.button.responsive-nav-button {
-  font-size: 2em;
-  border-radius: 100%;
-  width: 1.7em;
-  height: 1.7em;
-  margin-right: 20px;
+/* Medium Screens (Tablets) */
+@media only screen and (min-width: 40em) {
+
+  #top-level-navigation {
+    position: inherit;
+    bottom: inherit;
+    right: inherit;
+    background: transparent;
+    width: inherit;
+    z-index: inherit;
+    margin: inherit;
+    border-radius: none;
+    box-shadow: none;
+    border: none;
+  }
+
+  .top-bar {
+    flex-wrap: wrap;
+  }
+
+  .top-bar-title {
+    width: 100%;
+    display: block;
+  }
+
+  .top-bar .top-bar-right {
+    margin: 0 auto;
+  }
+
+  #top-level-navigation a {
+    border: none;
+  }
+
 }
 
-/* Medium Screens (Tablets) */
-@media only screen and (min-width: 40.063em) {
+/* Large Screens (Laptops) */
+@media only screen and (min-width: 64em) {
+
+  .top-bar-title {
+    width: 30%;
+  }
+
+  .top-bar .top-bar-right {
+    margin: 2px 0 auto 0;
+  }
+
+  .site-logo {
+    font-size: 1.5em;
+    display: inline;
+    text-align: left;
+  }
 
   .site-logo img {
     max-width: 35px;
   }
 
-  /* nav ul {
-    float: right;
+  #top-level-navigation a {
+    font-size: 1.2em;
+    padding: 0.8em;
   }
-
-  nav a {
-    padding: 20px 0.3em;
-  } */
-
-}
-
-/* Large Screens (Laptops) */
-@media only screen and (min-width: 64.063em) {
 
   .site-logo a:hover img,
   .site-logo a:focus img {
@@ -352,12 +434,22 @@ header {
     transform: scale(1.4) translate(-10px, 5px) rotate(-3deg);
   }
 
-  /* nav a {
-    padding: 1em 0.6em;
-    font-size: 1em;
-  } */
-
 }
+
+
+/**********************************************************
+
+  PARTNERS
+
+ **********************************************************/
+
+.partners {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
 
 
 
@@ -469,37 +561,16 @@ footer ul {
   min-height: 350px;
   background: url('images/backgrounds/hero.jpg') center center no-repeat;
   background-size: cover;
-  margin-bottom: 0;
-  margin-top: 0;
   color: #FFF;
-  padding: 3em 0;
+  padding: 1em 0;
 }
 
-@-webkit-keyframes scale-in {
+@keyframes bounce-scale {
   0% {
-    -wekbit-transform: scale(0);
-    transform: scale(0);
-    opacity: 0;
-  }
-  70% {
-    -wekbit-transform: scale(1.1);
-    transform: scale(1.1);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
   }
-}
-
-@keyframes scale-in {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
   70% {
-    transform: scale(1.1);
-    opacity: 1;
+    transform: scale(1.2);
   }
   100% {
     transform: scale(1);
@@ -507,8 +578,15 @@ footer ul {
 }
 
 .site-headline {
-  margin: 1.5em 0;
-  font-size: 2em;
+  margin: 0 0 1em 0;
+  text-shadow: 0px 1px 5px rgba(0,0,0,0.8);
+}
+
+.site-headline p {
+  margin: 0 0 1em 0;
+  padding: 0;
+  font-size: 1.4em;
+  text-align: center;
 }
 
 .social {
@@ -535,20 +613,16 @@ footer ul {
 .instagram a { background-image: url('images/social/instagram.svg'); }
 .youtube a { background-image: url('images/social/youtube.svg'); }
 
-.next-event {
-  color: #000;
-  -webkit-animation: scale-in 400ms ease-out 300ms;
-  animation: scale-in 400ms ease-out 300ms;
-}
-
 .event-title {
   display: block;
   font-family: 'Droid Sans', sans-serif;
   font-size: 1.4rem;
   text-align: center;
-  color: #000;
-  text-shadow: none;
-  margin-top: 0;
+  color: #FFF;
+  background: rgba(24, 154, 153, 1);
+  padding: 0.5em;
+  text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+  border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
 .event-note {
@@ -559,9 +633,6 @@ footer ul {
 .section-callout {
   background: rgb(24, 154, 153);
   color: #FFF;
-  padding: 3em 0;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .section-callout h2,
@@ -918,14 +989,20 @@ body.single-studio .links a {
   }
 
 
-
 }
 
 /* Medium Screens (Tablets) */
-@media only screen and (min-width: 40.063em) {
+@media only screen and (min-width: 40em) {
 
   .hero {
     min-height: 200px;
+    padding: 3em 0;
+  }
+
+  .site-headline p {
+    margin: 1.5em 0;
+    font-size: 1.6em;
+    text-align: left;
   }
 
   .social {
@@ -939,6 +1016,7 @@ body.single-studio .links a {
   .section-callout input {
     width: auto;
     margin: 0 0.5em 0 0;
+    display: inline;
   }
 
   body.single-game .banner,
@@ -974,10 +1052,14 @@ body.single-studio .links a {
 }
 
 /* Large Screens (Laptops) */
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 64em) {
 
   .hero {
     min-height: 480px;
+  }
+
+  .site-headline p {
+    font-size: 2em;
   }
 
   .event-title {
@@ -1034,7 +1116,7 @@ body.single-studio .links a {
   }
 
   .section-callout .button {
-    padding: 1.2em 3em;
+    padding: 0.9em 2em;
   }
 
   .item {
